# gopher-bot

./: .gitignore  AGENTS.md  AGENT_CHARTER.md  AGENT_COMMITMENTS.md  AUTONOMY_LEVELS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COORDINATOR_REGISTRY.md  DEVELOPMENT_CHARTER.md  KNOWLEDGE_SPACES.md  PROJECT.md  PROJECT_REGISTRY.md  README.md  SAFETY_CONTRACT.md  SECURITY.md  WORKBENCH_INDEX.md  pyproject.toml  requirements.txt  start-bot.bat  start-gopher-bot.bat  stop-bot.bat
.codex/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
avatar/: export_presets.cfg  main.gd  main.tscn  project.godot
config/: allowed_commands.example.yaml  projects.example.yaml
coordinators/: __init__.py  archivist.py  audio_sensor.py  avatar_watcher.py  awareness.py  base.py  bid.py  brain_loop.py  curiosity.py  dream.py  drive.py  embedder.py  ethos.py  feeling.py  hands.py  hands_policy.py  keeper.py  memory.py  mirror_chad.py  mirror_self.py  mirror_user.py  neuromodulation.py  orientation.py  pattern_monitor.py  percepts.py  reason.py  sensory.py  tier_config.py  vision_sensor.py  voice.py  wisdom.py
docs/: BACKLOG.md  INFLUENCES.md  PHASE1_CLOSURE.md  VISION.md  activity_model_design.md  design-notes-research-refinements.md  research-findings.md  session-log.md  whitepaper.md
fleet_command/: COMMAND_DOCTRINE.md  COMMISSIONING_CRITERIA.md  LESSONS_LEARNED_TEMPLATE.md  README.md  SHIP_DESIGN_NOTES.md  SHIP_REPORT_TEMPLATE.md  fleet_registry.yaml
interface/: bot.py  discord_bot.py  reflex.py  server.py  stt.py  tts.py  world_map.py
outputs/: codex_activity_model_A.md  codex_activity_model_B.md  codex_api_timeouts.md  codex_archivist_claim_extraction.md  codex_archivist_model_override.md  codex_available_models.md  codex_c006_closure.md  codex_discord_all_attachments.md  codex_doc_polish.md  codex_doc_polish2.md  codex_document_ingestion.md  codex_document_parsing.md  codex_embedder_override.md  codex_fix_awareness_noop_isolation.md  codex_fix_awareness_orientation_slow_tests.md  codex_gitignore_models.md  codex_media_routing.md  codex_model_overrides.md  codex_omniparser_drag.md  codex_orientation_current_time.md  (+23 more)
(+151 files in other folders)
