[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gopher-workbench-mcp"
version = "0.1.0"
description = "A conservative local-only MCP server for project SOPs, notes, git state, and allowlisted commands."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
gopher-workbench-mcp = "gopher_workbench_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

