[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gopher-bot"
version = "0.1.0"
description = "Coordinator brain and local web interface for Gopher-bot."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "neo4j>=5.0",
  "anthropic>=0.25",
  "openai>=1.0",
  "flask>=3.0",
  "flask-socketio>=5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["coordinators", "interface", "world_models"]
