[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gopher-bot"
version = "0.1.0"
description = "Coordinator brain and local web interface for Gopher-bot."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "neo4j>=5.0",
  "anthropic>=0.25",
  "openai>=1.0",
  "flask>=3.0",
  "flask-socketio>=5.0",
  "flask-sock>=0.6",
  "flask-cors>=4.0",
  "python-dotenv>=1.0",
  "pydantic>=2.5",
  "PySide6>=6.7",
  "pywinauto>=0.6.8",
  "pywin32>=306",
  "websocket-client>=1.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
vision = [
  "mss",
  "pyautogui",
  "pywinauto",
  "opencv-python",
  "torch",
  "ultralytics",
  "easyocr"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["coordinators", "interface", "world_models"]
